# cmake_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  library1.cpp  library1.h  library2.cpp  library2.h
